--- a/contact.html
+++ b/contact.html
@@ -74,11 +74,7 @@
     </main>
 
     <footer>
-      <div>
-        <a href="https://www.freepik.com/vectors/background"
-          >Background vector created by coolvector - www.freepik.com</a
-        >
-      </div>
+      <div>Created by - Yan Baetas</div>
       <div></div>
     </footer>
 
