--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 
     <footer>
       <div>
+        <span>Created by - Yan Baetas</span>
         <a href="https://www.freepik.com/vectors/background"
           >Background vector created by coolvector - www.freepik.com</a
         >
