Simple animation on pages

--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,10 @@
     <main>
       <section id="contact">
         <div class="container">
-          <h1>Contact</h1>
-          <p>You can find me in the following links:</p>
+          <div class="slide-top">
+            <h1>Contact</h1>
+            <p>You can find me in the following links:</p>
+          </div>
           <ul>
             <li>
               <a href="https://github.com/YanBaetas" target="_blank">
@@ -60,7 +62,10 @@
               </a>
             </li>
             <li>
-              <a href="https://github.com/YanBaetas" target="_blank">
+              <a
+                href="https://www.linkedin.com/in/yan-baetas-oliveira-9955471b0/"
+                target="_blank"
+              >
                 <img
                   src="./assets/images/linkedin-icon.svg"
                   alt="Linkedin Icon"
